# django_blank

./: pyproject.toml
blank/: db.sqlite3
blank/blank/: asgi.py  settings.py  urls.py  wsgi.py
blank/blank_app/: apps.py  views.py
blank/blank_app/migrations/: 0001_initial.py
blank/blank_app/templates/blank_app/: task_list.html
django_project/: db.sqlite3
django_project/app_blank/: apps.py  views.py
django_project/django_project/: settings.py  urls.py
