[tool.poetry]
name = "django-blank"
version = "0.1.0"
description = ""
authors = ["Alexandr"]
readme = "README.md"
packages = [{include = "django_blank"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
